# PoCs

./: .gitignore  Cargo.toml  README.md
FilecoinActor/: README.md
Kademlia/: Cargo.toml
Kademlia/src/: main.rs
RuntimePoc/wasmtime/wasi/: Cargo.toml
bazel-poc/: BUILD.bazel  README.md  WORKSPACE  maven_install.json
codegen/: Cargo.toml  example_config.yaml
codegen/src/: lib.rs
codegen/src/generator/: common.rs  flow.rs  task.rs  workflow.rs
contracts/counter1/: Cargo.toml
contracts/counter1/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/counter2/src/: contract.rs
cosmwasm-ibc/: .gitignore
cosmwasm-ibc/cw-ibc/: Cargo.toml  config.json
cross-contract-call/contracts/counter1/: NOTICE
cross-contract-call/contracts/counter1/src/: msg.rs
cross-contract-call/contracts/counter2/: Cargo.toml
cw-ibc/src/: ibc.rs  lib.rs
distributed-hash-table-poc/src/: main.rs
filecoin-actor-poc/: Cargo.toml
filecoin_near/: Cargo.toml
filecoin_near/src/: lib.rs
foundry-in-dive-poc/: kurtosis.yml  main.star
guessing-random-number-substrate-custom-blockchain/pallets/template/src/: lib.rs
guessing-random-number-substrate-custom-blockchain/runtime/src/: lib.rs
inter-actor-call-poc/: Cargo.toml
inter-actor-call-poc/src/: lib.rs  methods.rs
java-smart-contracts/: README.md  main.star
java-smart-contracts/app/: build.gradle
message-pasing-channels/: Cargo.toml  README.md
message-pasing-channels/mpmc_channel/: Cargo.toml
message-pasing-channels/mpmc_channel/src/: main.rs
message-pasing-channels/mpsc_channel/: Cargo.toml
message-pasing-channels/mpsc_channel/src/: main.rs
openwhisk_call/: Cargo.toml  asd.txt
openwhisk_call/src/: main.rs
parachain-student-poc/: para-2000-genesis-state  para-2000-wasm  plain-parachain-chainspec.json  raw-parachain-chainspec.json
parachain-student-poc/pallets/template/src/: lib.rs
payout/: Cargo.toml  action_purchase_workflow.wasm
payout/src/: lib.rs  wasi_http.rs
polkadot-kurtosis-poc/: README.md  kurtosis.yml
polkadot-ocw-poc/go-api/: go.sum  main.go
polkadot-ocw-poc/kube/: external-endpoint.yaml
polkadot-ocw-poc/substrate-node-template/: Cargo.toml  Dockerfile  README.md  Steps.md  customSpec.json  kurtosis.yml  main.star  rust-toolchain.toml  service.yaml
polkadot-ocw-poc/substrate-node-template/examples/: deploy-frequency-localnet.star  deploy-postgres.star  deploy-relay-localnet.star  exec-hello-world.star  exec-postgres.star
polkadot-ocw-poc/substrate-node-template/node/: Cargo.toml
polkadot-ocw-poc/substrate-node-template/node/src/: cli.rs  command.rs  rpc.rs  service.rs
polkadot-ocw-poc/substrate-node-template/pallets/template/: Cargo.toml
polkadot-ocw-poc/substrate-node-template/pallets/template/primitives/: Cargo.toml
polkadot-ocw-poc/substrate-node-template/pallets/template/rpc/: Cargo.toml
polkadot-ocw-poc/substrate-node-template/pallets/template/rpc/runtime-api/: Cargo.toml
polkadot-ocw-poc/substrate-node-template/pallets/template/rpc/runtime-api/src/: lib.rs
polkadot-ocw-poc/substrate-node-template/pallets/template/rpc/src/: lib.rs
polkadot-ocw-poc/substrate-node-template/pallets/template/src/: kurtosis.rs  lib.rs  mock.rs  testing.rs  tests.rs
polkadot-ocw-poc/substrate-node-template/runtime/: Cargo.toml
polkadot-ocw-poc/substrate-node-template/runtime/src/: lib.rs
polkadot_ocw_poc/go-api/: go.mod  kurtosis.go
polkadot_ocw_poc/substrate-node-template/: Cargo.toml
polkadot_ocw_poc/substrate-node-template/node/: Cargo.toml
polkadot_ocw_poc/substrate-node-template/node/src/: cli.rs  command.rs  main.rs  rpc_call.rs  service.rs
polkadot_ocw_poc/substrate-node-template/pallets/template/: Cargo.toml
polkadot_ocw_poc/substrate-node-template/pallets/template/rpc/src/: lib.rs
polkadot_ocw_poc/substrate-node-template/pallets/template/src/: kurtosis.rs  lib.rs  mock.rs  tests.rs
polkadot_ocw_poc/substrate-node-template/runtime/: Cargo.toml
polkadot_ocw_poc/substrate-node-template/runtime/src/: lib.rs
rust-contract-building-poc/: kurtosis.yml  main.star
rust-contract-building-poc/artifacts/: checksums.txt  cw_nameservice.wasm
rust-contract-building-poc/nameservice/: Cargo.toml
rust-contract-building-poc/nameservice/examples/: schema.rs
rust-contract-building-poc/nameservice/schema/: cw-nameservice.json
rust-contract-building-poc/nameservice/src/: contract.rs  msg.rs  state.rs  tests.rs
smart_contracts/: README.md
smart_contracts/incrementer/: lib.rs
ssb-example/: Cargo.toml  README.md
ssb-example/src/: main.rs
substrate-blockchain/custom-token-substrate-pallet/: Cargo.toml  README.md
substrate-blockchain/custom-token-substrate-pallet/src/: lib.rs
substrate-blockchain/guessing-random-number-game/: README.md
substrate-blockchain/guessing-random-number-game/node/src/: benchmarking.rs  chain_spec.rs  (+3 more)
substrate-node/pallets/template/: README.md
substrate-node/runtime/: Cargo.toml
substrate-node/runtime/src/: lib.rs
substrate-smart-contracts-poc/erc20/: Cargo.toml  lib.rs
wasm-runtime-poc/: Cargo.toml
wasm-runtime-poc/wasmtime/: Cargo.toml
wasm-storage-poc/substrate-node-template/node/: Cargo.toml
wasm-storage-poc/substrate-node-template/pallets/template/: Cargo.toml
wasm-storage-poc/substrate-node-template/pallets/template/src/: lib.rs  tests.rs
wasm-storage-poc/substrate-node-template/runtime/: Cargo.toml
wasm-storage-poc/substrate-node-template/runtime/src/: lib.rs
wasm_runtime_poc/wasmtime/src/: lib.rs
wasm_runtime_poc/wasmtime/wasi/: Cargo.toml
workflow-codegen/: Cargo.toml  config2.yaml  example_config.yaml
workflow-codegen/src/: example.rs  lib.rs
workflow-codegen/src/generator/: flow.rs  mod.rs  task.rs  types.rs  workflow.rs
workflow-with-state-management-poc/runtime/: Cargo.toml
workflow-with-state-management-poc/runtime/src/: helper.rs  lib.rs  types.rs  wasi_http.rs
workflow-with-state-management-poc/state-managed-workflow/: Cargo.toml
workflow-with-state-management-poc/state-managed-workflow/src/: common.rs  lib.rs  macros.rs  state_manager.rs  traits.rs  types-cmp.rs  types.rs
(+8 files in other folders)
