[package]
name = "filecoin_near"
version = "0.1.0"
edition = "2021"

[lib]
crate-type =["cdylib","rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forest_ipld = {git="https://github.com/ChainSafe/forest",branch="main"}
forest_ipld_amt = {git="https://github.com/ChainSafe/forest",branch="main"}