[package]
name = "exaple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features =["blocking", "json"] }
serde = "1.0.167"
serde_json = "1.0.100"
base64 = "0.20.0"
openwhisk-client-rust = { version = "0.1.7", default-features = false }


