[package]
name = "action-polkadot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.81", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0.56"
wasmtime = "2.0.1"
wasmtime-wasi = "2.0.1"
wasi-common = "2.0.1"
bytes = "1"
futures = "0.3"
http = "0.2"
reqwest = { version = "0.11", default-features = true, features = [
        "json",
        "blocking",
    ] }
thiserror = "1.0"
tokio = { version = "1.4.0", features = [ "full" ] }
tracing = { version = "0.1", features = [ "log" ] }
url = "2.2.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1