[package]
name = "ssb_working"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kuska-handshake = { version="0.2", features=["sync","async_std"] }
kuska-sodiumoxide = "0.2.5-0"
structopt = "0.3.9"
crossbeam = "0.7.3"
base64 = "0.11.0"
regex = "1.3.4"
serde_json = { version = "1.0.48", features=["preserve_order","arbitrary_precision"] }
env_logger = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }
async-std = { version = "1.5.0", features=["unstable","attributes"] }
log = "0.4.8"
kuska-ssb = { git = "https://github.com/Kuska-ssb/ssb.git" }