[workspace]
resolver = "2"
members = [
    "node",
    "pallets/template",
    "pallets/template/rpc",
    "pallets/template/rpc/runtime-api",
    "runtime",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1