[package]
name = "wasmtime"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-experimental-http = "0.10.0"
 anyhow    = "1.0"
    bytes     = "1"
    http      = "0.2"
    thiserror = "1.0"
