[package]
name = "pallet-template-rpc-runtime-api"
version = "0.0.1"
description = "A package that adds Runtime Api for the Template pallet"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition.workspace = true
license = "MIT-0"
publish = false
homepage = "https://substrate.io"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[dependencies]
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.5.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
]}
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.5.0" }

[features]
default = ["std"]
std = [
	'sp-std/std',
	'sp-api/std',
]